--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
     <!--Google Maps and HFR API-->
     <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyD2JgmkFyDb7M26XkLy9zIASsOOZ6JuRqk&amp;v=3"></script>
-    <script type="text/javascript" src="js/RTVMapType.js"></script>
+    <script type="text/javascript" src="http://cordc.ucsd.edu/js/RTV/RTVMapType.js"></script>
   
     <script>
       var map = null;                                           // The GMap3 object
