--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!--Logo-->
         <div class="uk-navbar-center">
-          <a class="uk-navbar-item uk-logo uk-margin-left" href="#">
+          <a class="uk-navbar-item uk-logo uk-margin-left" target="_blank" href="https://sccoos.org">
             <img id="logo" src="images/scoos_logo_landscape_transparent.png" alt="logo" style="height: 28px;">
           </a>
         </div>
